--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   flutter_localization: ^0.2.0
   intl: ^0.19.0
   flutter_gen: ^5.6.0
+  firebase_core: ^3.2.0
+  firebase_auth: ^5.1.2
 
 dev_dependencies:
   flutter_test:
