--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_gen: ^5.6.0
   firebase_core: ^3.2.0
   firebase_auth: ^5.1.2
+  get_it: ^7.7.0
 
 dev_dependencies:
   flutter_test:
