--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   firebase_core: ^3.2.0
   firebase_auth: ^5.1.2
   get_it: ^7.7.0
+  image_picker: ^1.1.2
+  cloud_firestore: ^5.2.1
 
 dev_dependencies:
   flutter_test:
